<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green0">

    <ImageView
        android:id="@+id/background_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:src="@drawable/background_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/background_start"
        app:layout_constraintStart_toStartOf="@id/background_start"
        android:text="@string/sign_up_tv_start"
        android:textSize="30dp"
        android:layout_marginTop="87dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/noto_sans_bold" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="620dp"
        >

        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/box_main_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"
            android:text="@string/sign_up_btn_login_email"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_semi_bold"/>

        <Button
            android:id="@+id/join_membership_btn"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/next_btn"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_up_btn_join_membership"
            android:textSize="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="0dp"
            android:fontFamily="@font/noto_sans_regular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>