<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green0">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/icn_back"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_tv_input_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="24dp"
            android:layout_marginTop="76dp"
            android:fontFamily="@font/noto_sans_bold"
            />

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="149dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical"
            android:background="@drawable/box_edit_text">
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/sign_up_et_input_nickname"
                android:textSize="11dp"
                android:textColorHint="@color/brownGray"
                android:fontFamily="@font/noto_sans_bold"
                android:paddingTop="11dp"
                android:paddingBottom="0dp"
                android:paddingStart="10dp"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/empty_circles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_empty_circles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="462dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_filled_circle"
            app:layout_constraintStart_toStartOf="@id/empty_circles"
            app:layout_constraintTop_toTopOf="@id/empty_circles"
            app:layout_constraintBottom_toBottomOf="@id/empty_circles"
            android:layout_marginStart="0.5dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_filled_circle"
            app:layout_constraintStart_toStartOf="@id/empty_circles"
            app:layout_constraintTop_toTopOf="@id/empty_circles"
            app:layout_constraintBottom_toBottomOf="@id/empty_circles"
            app:layout_constraintEnd_toEndOf="@id/empty_circles"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icn_filled_circle"
            app:layout_constraintEnd_toEndOf="@id/empty_circles"
            app:layout_constraintTop_toTopOf="@id/empty_circles"
            app:layout_constraintBottom_toBottomOf="@id/empty_circles"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="620dp"
        >
        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/box_main_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"
            android:text="@string/start"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>