<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green0">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/icn_back"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:background="@drawable/box_small_next_button"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/black"
            android:textSize="11dp"
            android:fontFamily="@font/noto_sans_regular"/>
        <View
            android:id="@+id/back_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="76dp"
            android:background="@color/whiteGray"
            app:layout_constraintHorizontal_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_line"
            android:layout_marginHorizontal="24dp"
            android:weightSum="4"
            android:orientation="horizontal"
            android:gravity="start"
            >
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="3"
                android:background="@color/green4"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/onboarding_tv_diary_name"
            android:textSize="20dp"
            android:textColor="@color/green4"
            android:fontFamily="@font/noto_sans_bold"/>

        <TextView
            android:id="@+id/text_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/onboarding_tv_diary_name_s"
            android:gravity="center"
            android:textSize="11dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/brownGray"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_edit_box"
        android:layout_width="0dp"
        android:layout_height="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="215dp"
        android:background="@drawable/box_edit_onboarding">
        <EditText
            android:id="@+id/edit_diary_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="28dp"
            android:paddingTop="0dp"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:paddingHorizontal="0dp"
            android:background="@android:color/transparent"
            android:textSize="11dp"
            android:fontFamily="@font/noto_sans_regular"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>